# SN_AMBIENTAL2024

./: .coverage  db.sqlite3  pyproject.toml  pytest.ini  readme.md  requirements.txt
core/: api.py  settings.py  urls.py
itens_pedidos/: apps.py  models.py  schemas.py  tests.py  views.py
itens_pedidos/migrations/: 0001_initial.py  0002_initial.py
pedido/: models.py  schemas.py  tests.py  views.py
pedido/migrations/: 0001_initial.py  0002_initial.py
usuario/: apps.py  models.py  schemas.py  tests.py  views.py
usuario/management/commands/: populate_db.py
usuario/migrations/: 0001_initial.py
utils/login/: login.py  schemas.py
utils/signals/: signals.py
