[tool.poetry]
name = "desafio sn"
version = "0.1.0"
description = "Desafio para contratação de estagio"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-ninja = "^1.3.0"
djangorestframework-simplejwt = "^5.3.1"
django-ninja-jwt = "^5.3.4"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-django = "^4.9.0"
mysqlclient = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
